# hmg

./: hefty-algebras.cabal
app/: Main.hs
dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Elab.hs  Elab.hs.html  Free.hs  Hefty.hs.html
src/Data/: Regex.hs  Term.hs
src/Examples/: Censor.hs  Compiler.hs  HMScope.hs  HMXy.hs  LambdaState.hs  Prolog.hs  Prolog2.hs
src/Free/: Abort.hs  Error.hs  NonDet.hs  Out.hs  Read.hs  Reader.hs  Scope.hs  State.hs
src/Free/Logic/: Equals.hs  Exists.hs  Generalize.hs  Or.hs
src/Hefty/: Censor.hs  Except.hs  Except.hs.html  Lambda.hs  Local.hs  PEG.hs
src/Val/: Subtype.hs
tests/: GraphConstruction.hs  RETest.hs  Resolution.hs  Tests.hs  Util.hs
