cabal-version:      2.4
name:               hefty-algebras
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Casper Bach Poulsen
maintainer:         casperbp@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    hs-source-dirs:   src
    exposed-modules:  Examples.HMScope
                      Free.Scope
                      Free.NonDet
                      Free.Abort
                      Free.Out
                      Free.Error
                      Free.Logic.Exists
                      Free.Logic.Equals
                      Free.Logic.Generalize
                      Free
                      Data.Regex
                      Data.Term
    other-modules:    Elab
                      Hefty
    build-depends:    ListLike, base >=4.14 && <5, containers >= 0.6.5.1, transformers >= 0.5.6.2
    default-language: Haskell2010
    default-extensions: DerivingStrategies
                        TypeApplications
                        TypeOperators
                        RankNTypes
                        DeriveFunctor
                        StandaloneDeriving
                        KindSignatures
                        EmptyCase
                        MultiParamTypeClasses
                        GADTs
                        FunctionalDependencies
                        ScopedTypeVariables
                        QuantifiedConstraints
                        DataKinds
                        UndecidableInstances
                        FlexibleInstances
                        FlexibleContexts
                        IncoherentInstances
                        AllowAmbiguousTypes
                        LambdaCase
                        DeriveFoldable
                        DeriveGeneric
                        DeriveTraversable
                        DeriveAnyClass
                        PatternSynonyms
                        PartialTypeSignatures
    ghc-options:      -W
                      -O3
                      -threaded
                    
executable hefty-algebras-exe
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.14, containers >= 0.6.5.1, hefty-algebras, transformers >= 0.5.6.2
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:     -O3
                     -threaded
